--- a/LivingWageProject.ipynb
+++ b/LivingWageProject.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Can machine learning algorithms predict if a person's wage is enough to cover basic costs of living? Evidence from socioeconomic data of Chilean individuals\n",
+    "# _Can machine learning algorithms predict if a person earns a living wage? Evidence from socioeconomic data of Chilean individuals_\n",
     "\n",
     "\n",
     "### Joaquin Perez-Lapillo\n",
@@ -21,17 +21,6 @@
     "- A secondary aim is to inform which are the most relevant features in prediction, i.e. what defines if a person earns a living wage.\n",
     "- Living wage: as defined by international organizations, it represents the wage that meets a person's real cost of living in a certain location [2]. For the case of Chile, in 2018 it was defined in 391,400 Chilean pesos per month (roughly £700 at PPP) [3].\n",
     "\n",
-    "***\n",
-    "### Table of contents\n",
-    "\n",
-    "1. [Import libraries and data] (#import)\n",
-    "2. [Selecting variables for study] (#selecting)\n",
-    "3. [Initial processing] (#process)\n",
-    "4. [Dealing with missings and outliers] (#missings)\n",
-    "5. [Exploratory Data Analysis (EDA)] (#eda)\n",
-    "6. [Data preparation for algorithms] (#prep)\n",
-    "7. [Performing classification and evaluating performance] (#ML)\n",
-    "8. [Feature importance analysis] (#feature)\n",
     "\n",
     "\n",
     "\n",
@@ -1492,7 +1481,7 @@
     "- Having a **bank account** seems to be very relevant in predicting living wage, which could be saying that banks in Chile are unwilling to incorporate people with low wage as their clients probably because of their risk profile.\n",
     "- Although they did not seem highly important when EDA was performed, **age** and **hours worked per week** were selected as part of the top 5 of most important features.\n",
     "- Living in a certain **region** seems also relevant in prediction. This shows the need for having different living wages for each group of regions (extreme, centre, and capital).\n",
-    "- **Experience** is less relevant than education for defining if an indivudual earns a living wage. "
+    "- **Experience** is less relevant than education for defining if an individual earns a living wage. "
    ]
   },
   {
